// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > Snapshot Tests > matches snapshot for basic input 1`] = `
<div>
  <div
    class="relative"
  >
    <input
      class="flex w-full h-11 rounded-xl text-sm bg-white/[0.03] border border-white/10 text-white placeholder:text-slate-500 transition-all duration-200 px-4 focus:outline-none focus:border-primary/50 focus:ring-2 focus:ring-primary/20 focus:bg-white/[0.05] hover:border-white/20 hover:bg-white/[0.04] disabled:opacity-50 disabled:cursor-not-allowed"
      placeholder="基础输入框"
      value=""
    />
  </div>
</div>
`;

exports[`Input > Snapshot Tests > matches snapshot when disabled 1`] = `
<div>
  <div
    class="relative"
  >
    <input
      class="flex w-full h-11 rounded-xl text-sm bg-white/[0.03] border border-white/10 text-white placeholder:text-slate-500 transition-all duration-200 px-4 focus:outline-none focus:border-primary/50 focus:ring-2 focus:ring-primary/20 focus:bg-white/[0.05] hover:border-white/20 hover:bg-white/[0.04] disabled:opacity-50 disabled:cursor-not-allowed"
      disabled=""
      value="禁用"
    />
  </div>
</div>
`;

exports[`Input > Snapshot Tests > matches snapshot with error 1`] = `
<div>
  <div
    class="relative"
  >
    <input
      class="flex w-full h-11 rounded-xl text-sm bg-white/[0.03] border text-white placeholder:text-slate-500 transition-all duration-200 px-4 focus:outline-none focus:ring-2 focus:bg-white/[0.05] hover:border-white/20 hover:bg-white/[0.04] border-red-500/50 focus:border-red-500 focus:ring-red-500/20 disabled:opacity-50 disabled:cursor-not-allowed"
      value="错误文本"
    />
  </div>
</div>
`;

exports[`Input > Snapshot Tests > matches snapshot with icon 1`] = `
<div>
  <div
    class="relative"
  >
    <div
      class="absolute left-3.5 top-1/2 -translate-y-1/2 text-slate-500 pointer-events-none"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-search h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21 21-4.34-4.34"
        />
        <circle
          cx="11"
          cy="11"
          r="8"
        />
      </svg>
    </div>
    <input
      class="flex w-full h-11 rounded-xl text-sm bg-white/[0.03] border border-white/10 text-white placeholder:text-slate-500 transition-all duration-200 pl-10 pr-4 focus:outline-none focus:border-primary/50 focus:ring-2 focus:ring-primary/20 focus:bg-white/[0.05] hover:border-white/20 hover:bg-white/[0.04] disabled:opacity-50 disabled:cursor-not-allowed"
      placeholder="搜索..."
      value=""
    />
  </div>
</div>
`;
